Criação da página de cadastro para a realização do envio de informações do frontend ao backend #1 e #2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Leitação Absoluta</h1>
+        <h1>Lactação</h1>
+
+        <nav>
+            <a href="./pages/cadastro.html">Cadastro</a>
+        </nav>
 
         <button>Buscar usuários</button>
     </header>
