--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./script.js" defer></script>
-    <title>Leitação</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Projeto Fullstack</title>
 </head>
 <body>
     <header>
         <h1>Lactação</h1>
 
         <nav>
-            <a href="./pages/cadastro.html">Cadastro</a>
+            <ul>
+                <li>
+                    <a href="./pages/cadastro.html">Cadastro</a>
+                </li>
+                <li>
+                    <a href="./pages/usuarios.html">Usuários</a>
+                </li>
+            </ul>
         </nav>
 
-        <button>Buscar usuários</button>
     </header>
-
-    <main>
-        <h2>Lista de Usuários</h2>
-
-        
-    </main>
 </body>
 </html>
