--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./cadastro.js" defer></script>
+    <link rel="stylesheet" href="cadastro.css">
     <title>Formulário de Cadastro</title>
 </head>
 <body>
